# boids

./: .gitignore  CMakeLists.txt  README.md  run
include/: agent.hpp  swarm.hpp  vector2d.hpp
src/: agent.cpp  main.cpp  swarm.cpp  vector2d.cpp
